Fix T70539: file folder color preference not saved

Please always bump the subversion for cases like this.