source/blender/blenloader/intern/versioning_userdef.c
@@ -147,15 +147,18 @@ static void do_versions_theme(const UserDef *userdef, bTheme *btheme)
     FROM_DEFAULT_V4_UCHAR(space_outliner.active);
   }
 
-  /**
-   * Include next version bump.
-   */
-  {
+  if (!USER_VERSION_ATLEAST(281, 14)) {
     FROM_DEFAULT_V4_UCHAR(space_file.execution_buts);
     FROM_DEFAULT_V4_UCHAR(tui.icon_folder);
     FROM_DEFAULT_V4_UCHAR(space_clip.path_keyframe_before);
     FROM_DEFAULT_V4_UCHAR(space_clip.path_keyframe_after);
     copy_v4_v4_uchar(btheme->space_nla.nla_track, btheme->space_nla.header);
+  }
+
+  /**
+   * Include next version bump.
+   */
+  {
   }
 
 #undef FROM_DEFAULT_V4_UCHAR
